export function GET() {
  return Response.json({ message: "hello world" });
}
